<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="309dp"
        android:layout_height="62dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/op1"
        android:ems="10"
        android:hint="@string/op1"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="310dp"
        android:layout_height="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="56dp"
        android:autofillHints="@string/op2"
        android:ems="10"
        android:hint="@string/op2"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNum1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:onClick="calcular"
        android:text="@string/boton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="313dp"
        android:layout_height="53dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv"
        android:textSize="24sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNum2">

        <RadioButton
            android:id="@+id/rbSuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suma" />

        <RadioButton
            android:id="@+id/rbResta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resta" />

        <RadioButton
            android:id="@+id/rbMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplica" />

        <RadioButton
            android:id="@+id/rbDivi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>